--- a/crs/index.html
+++ b/crs/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wordpress интенсив</title>
+    <title>wordpress интенсив ха-ха-ха</title>
     <link rel="stylesheet" href="css/fonts_style.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
