--- a/crs/index.html
+++ b/crs/index.html
@@ -24,6 +24,7 @@
             </div>
             <h2 class="title">Куда сложнее сделать это правильно!</h2>
 			<h3>тестовый тест</h3>
+			<h3>проверка</h3>
 
             <div class="promo_text">
                 Ежедневно в России появляется более 5 000 новых сайтов.<br> И только единицы из них становятся популярными и приносят ощутимую прибыль. В чем секрет? В чем формула успеха? Узнайте на предстоящем двухдневном <span>БЕСПЛАТНОМ</span> интенсиве!
